<resources>
    <!-- String related to interface-->
    <string name="app_name">动物防疫离线录入系统</string>
    <string name="title_home">首页</string>
    <string name="title_eartag">耳标</string>
    <string name="title_chipset">芯片</string>
    <string name="title_antiepidemic">防疫</string>
    <string name="title_about">关于</string>

    <!-- Strings related to login -->
    <string name="prompt_mobile">手机号</string>
    <string name="prompt_email">邮箱</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录</string>
    <string name="invalid_email">邮箱不正确！</string>
    <string name="invalid_username">用户名(手机号)不正确！</string>
    <string name="invalid_password">密码太短！</string>
    <string name="incorrect_password">密码不正确！</string>
    <string name="field_required">必填字段</string>
    <string name="action_logout">退出</string>
    <string name="action_sync">同步</string>

    <!-- String related to security-->
    <string name="security_key">273ece6f97dd844d</string>

    <!-- String related to farmer data binding-->
    <string name="action_search">搜索</string>
    <string name="farmer_field_title_householder">畜主</string>
    <string name="farmer_field_hint_householder">*请输入畜主...</string>
    <string name="farmer_field_title_mobile">手机</string>
    <string name="farmer_field_hint_mobile">*请输入手机号...</string>
    <string name="farmer_field_title_address">地址</string>
    <string name="farmer_field_hint_address">*请输入畜主地址...</string>
    <string name="farmer_field_title_breed_type">类型</string>
    <string name="farmer_field_hint_breed_type">请输入饲养...</string>
    <string name="farmer_edit_action_title">编辑</string>
    <string name="farmer_add_action_title">添加</string>

    <!-- String related to eartag fragment-->
    <string name="farmer_selector_hint">*请选择畜主...</string>
    <string name="eartag_field_title_start_eartag">起始耳标</string>
    <string name="eartag_field_title_end_eartag">结束耳标</string>
    <string name="eartag_field_hint_start_eartag">*请扫码/输入起始耳标</string>
    <string name="eartag_field_hint_end_eartag">*请扫码/输入结束耳标</string>
    <string name="action_submit">提交</string>
    <string name="action_scan_start_eartag">扫描起始耳标</string>
    <string name="action_scan_end_eartag">扫描结束耳标</string>
    <string name="status_scaning">扫描中...</string>

    <string-array name="breed_types">
        <item>猪</item>
        <item>牛羊</item>
        <item>混合</item>
    </string-array>
</resources>
