<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:orderInCategory="1"
        android:title="@string/action_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_edit_farmer"
        android:icon="@drawable/ic_account_edit_white_48dp"
        android:orderInCategory="2"
        android:title="@string/farmer_edit_action_title"
        app:showAsAction="always"></item>

    <item
        android:id="@+id/action_add_farmer"
        android:icon="@drawable/ic_account_plus_white_48dp"
        android:orderInCategory="3"
        android:title="@string/farmer_add_action_title"
        app:showAsAction="always"></item>

</menu>
