<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="qsh.com.animalantiepidemic.fragments.HomeFragment">

    <LinearLayout
        android:orientation="vertical"
        android:background="@drawable/background_color"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/farmer_field_title_householder" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/farmer_field_title_mobile" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/farmer_field_title_address" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/farmer_field_title_breed_type" />
        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/farmer_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp" />

    </LinearLayout>

</layout>
